# api-kids-abb

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  test_api.ps1
src/api_kids_abb/: main.py
src/api_kids_abb/controller/: __init__.py  kids_controller.py
src/api_kids_abb/model/: __init__.py  binary_search_tree.py  kid_model.py
src/api_kids_abb/schemas/: __init__.py
src/api_kids_abb/service/: __init__.py  kids_service.py
tests/: test_kids_abb.py
